@@ -7,3 +7,8 @@
 /client-client class
 [hub-client class
 hub-hub class]
+
+
+DC++ replaces all occurrences of "|" in <message> with "&#124;" and all occurrences of "$" with "&#36;". When displaying <message> the inverse replacement should be done.
+
+check send ret
